fix bug with text overflow

--- a/words_randomizer/css/style.css
+++ b/words_randomizer/css/style.css
@@ -12,8 +12,8 @@ main {
 }
 
 .random-word-style {
-  height: 4.2rem;
-  font-size: 1.5rem;
+  min-height: 2.5rem;
+  font-size: 1rem;
   font-weight: bold;
 }
 
